# eudai

./: .env.client  .env.ollama  .env.server  .gitattributes  .gitignore  LICENSE  README.md  noxfile.py
.github/: labels.yml  release-drafter.yml
.github/workflows/: labeler.yml  release.yml  tests.yml
backlog/: config.yml
docs/: design.md  requirements.md
docs/adr/: index.md
docs/adr/2025/08/: 2025-08-06-ollama-as-distinct-service.md  2025-08-09_docker-compose-vs-kubernetes.md
scripts/: doc-index.sh
server/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ci  Dockerfile.prod  Dockerfile.server  LICENSE  README.md  noxfile.py  pyproject.toml
server/docs/: conf.py  index.md  reference.md  usage.md
server/eudai/: .env.server  init.sql  pyproject.toml
server/eudai/src/eudai/: config.py
server/scripts/: dev.sh  docker-entrypoint.sh  install.sh
server/src/eudai_backend/: __init__.py  __main__.py
server/tests/: __init__.py  test_main.py
